# FastGraphletTransform.jl

./: Manifest.toml  Project.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
FastGraphletTransform/: __init__.py  fglt.py  juliapkg.json
src/: FGLT.jl  FastGraphletTransform.jl
test/: runtests.jl
